# python-env-bootstrap

./: .gitignore  CHANGELOG.rst  README.md  README.rst  bootstrap.py  pyproject.toml
scripts/: bootstrap-310.py  bootstrap-38.py
